add APIs for query based NoSQLi
