# crAPI/services/community/api/controllers/coupon_controller.go
@@ -24,6 +24,8 @@ import (
 	"net/http"
 	"strings"
 
+	"github.com/joncalhoun/qson"
+
 	"crapi.proj/goservice/api/models"
 	"crapi.proj/goservice/api/responses"
 	"go.mongodb.org/mongo-driver/bson"
@@ -125,7 +127,7 @@ func (s *Server) ValidateCoupon(w http.ResponseWriter, r *http.Request) {
 // @Failure 500 {object} string
 // @Router /community/api/v2/coupon/validate-coupon [get]
 //
-func (s *Server) ValidateCouponViaGET(w http.ResponseWriter, r *http.Request) {
+func (s *Server) ValidateCouponViaGETv2(w http.ResponseWriter, r *http.Request) {
 
 	couponCode := r.URL.Query().Get("coupon_code")
 	if couponCode == "" {
@@ -152,6 +154,48 @@ func (s *Server) ValidateCouponViaGET(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
+	// Susceptible to NoSQLi via param value injection
+	couponData, err := models.ValidateCode(s.Client, s.DB, bsonMap)
+	if err != nil {
+		fmt.Println("Error fetching Coupon", couponData, err)
+		responses.JSON(w, http.StatusInternalServerError, err)
+		return
+	}
+	responses.JSON(w, http.StatusOK, couponData)
+}
+
+//ValidateViaGetCoupon Check if coupon present in database
+//@return
+//@params ResponseWriter, Request
+//Server have database connection
+//
+// Below are swagger annotations for: https://github.com/swaggo/swag
+// @Summary Check the validity of the coupon in the shop database.
+// @Description Validate coupon code specified as query param
+// @Accept json
+// @Produce json
+// @Param coupon_code query string true "Coupon Code"
+// @Success 200 {object} models.Coupon
+// @Failure 400 {object} string
+// @Failure 422 {object} string
+// @Failure 500 {object} string
+// @Router /community/api/v1/coupon/validate-coupon [get]
+//
+func (s *Server) ValidateCouponViaGETv1(w http.ResponseWriter, r *http.Request) {
+	queryJSON, err := qson.ToJSON(r.URL.RawQuery)
+	if err != nil {
+		responses.ERROR(w, http.StatusUnprocessableEntity, err)
+		return
+	}
+
+	var bsonMap bson.M
+	err = json.Unmarshal(queryJSON, &bsonMap)
+	if err != nil {
+		responses.ERROR(w, http.StatusUnprocessableEntity, err)
+		return
+	}
+
+	// Susceptible to NoSQLi via the full query string
 	couponData, err := models.ValidateCode(s.Client, s.DB, bsonMap)
 	if err != nil {
 		fmt.Println("Error fetching Coupon", couponData, err)
